--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "mongoose": "^8.15.1",
+    "node-mocks-http": "^1.17.2"
   },
   "devDependencies": {
     "jest": "^29.7.0"
